--- a/_posts/2020-09-23-dinophoto2.md
+++ b/_posts/2020-09-23-dinophoto2.md
@@ -13,7 +13,7 @@ I've been learning some more about photography, and taking some more bird photos
 ### Emu
 ![emu-body](/assets/images/posts/emu-body.jpg)
 
-One of my parents' new neighbors owns an emu! They also have goats, sheep, turkeys, dogs, llamas, and chickens, but the emu gets its own pen and is by far the most exotic of their pets.  It was just walking around and spent a lot of time preening itself with its beak.  It has so much neck mobility that it can just hold its body stationary and move its head to reach any part it wants.
+One of my parents' new neighbors owns an Emu! They also have goats, sheep, turkeys, dogs, llamas, and chickens, but the Emu gets its own pen and is by far the most exotic of their pets.  It was just walking around and spent a lot of time preening itself with its beak.  It has so much neck mobility that it can just hold its body stationary and move its head to reach any part it wants.
 
 ![emu-hey](/assets/images/posts/emu-hey.jpg)
 
@@ -22,11 +22,11 @@ Emus are part of the group Paleognathae, a southern-hemisphere group that also i
 ### Geese
 ![greylag](/assets/images/posts/greylag.jpg)
 
-These geese were in a pond at an orchard I visited, and were quite used to human presence, so I was able to get really close.  Like the emu, they spent a lot of time preening (that's why his beak is full of down here).  This goose is a feral hybrid of a domestic greylag, which is a European species, and the American snow goose.
+These geese were in a pond at an orchard I visited, and were quite used to human presence, so I was able to get really close.  Like the Emu, they spent a lot of time preening (that's why his beak is full of down here).  This goose is a feral hybrid of a domestic Greylag, which is a European species, and the American Snow Goose.
 
 ![snow-goose](/assets/images/posts/swimming.jpg)
 
-Speaking of snow geese, the same pond was home to three snow geese, which spend their summers in the Arctic and their winters in Mexico.  Perhaps these were just stopping by the pond on their way to Mexico, or perhaps they were tempted into taking up permanent residence at this pond by the abundance of bread crumbs.  Peace was never an option!
+Speaking of Snow Geese, the same pond was home to three Snow Geese, which spend their summers in the Arctic and their winters in Mexico.  Perhaps these were just stopping by the pond on their way to Mexico, or perhaps they were tempted into taking up permanent residence at this pond by the abundance of bread crumbs.  Peace was never an option!
 
 ![flexible](/assets/images/posts/flexible.jpg)
 
@@ -34,12 +34,12 @@ Check out that neck flexibility!  I'm jealous.
 
 ![preening](/assets/images/posts/preening.jpg)
 
-Like the greylag, these geese were used to humans and allowed me to get really close once they realized I wasn't a screaming child.
+Like the Greylag, these geese were used to humans and allowed me to get really close once they realized I wasn't a screaming child.
 
 ### Wild Turkey
 ![turkey-gossip](/assets/images/posts/turkey-gossip.jpg)
 
-I see lots of wild turkeys when I go for walks and bike rides.  These poults (baby turkeys are called poults, which comes from the same word root as poultry) were part of a family of 8 or so individuals.  It looks to me like they're gossiping.
+I see lots of Wild Turkeys when I go for walks and bike rides.  These poults (baby turkeys are called poults, which comes from the same word root as poultry) were part of a family of 8 or so individuals.  It looks to me like they're gossiping.
 
 ![turkey-hey](/assets/images/posts/turkey-hey.jpg)
 
@@ -70,24 +70,24 @@ My uncle, who introduced me to birding, calls them "LBBs".  (He's really my dad'
 
 ![nuthatch](/assets/images/posts/nuthatch.jpg)
 
-This is a white-breasted nuthatch.  It looked like they were hammering at the bark of this tree like a woodpecker, but what they were actually doing was wedging a seed or hard-shelled insect into a crack and then hacking it open with their beaks.  They're very acrobatic, and had no problem scurrying up, down, and upside-down all over the tree.
+This is a White-Breasted Nuthatch.  It looked like they were hammering at the bark of this tree like a woodpecker, but what they were actually doing was wedging a seed or hard-shelled insect into a crack and then hacking it open with their beaks.  They're very acrobatic, and had no problem scurrying up, down, and upside-down all over the tree.
 
 ![pink-sided](/assets/images/posts/pink-sided.jpg)
 
-Last dino-photography post I showed off my leucistic Oregon junco neighbor, Bianca, but didn't show what a typically colored junco looked like.  This is a pink-sided junco, one of a few different color morphs of the dark-eyed junco species (Oregon being another color morph similar to pink-sided).  Both pink-sided and Oregon juncos are super common where I live.
+Last dino-photography post I showed off my leucistic Oregon Junco neighbor, Bianca, but didn't show what a typically colored junco looked like.  This is a Pink-Sided Junco, one of a few different color morphs of the Dark-Eyed Junco species (Oregon being another color morph similar to Pink-Sided).  Both Pink-Sided and Oregon Juncos are super common where I live.
 
 ![titmouse](/assets/images/posts/sassy-titmouse.jpg)
 
-This oak titmouse was foraging in the grass alongside a couple of juncos, and I caught it at a weird moment.  It looks taken aback by something.
+This Oak Titmouse was foraging in the grass alongside a couple of juncos, and I caught it at a weird moment.  It looks taken aback by something.
 
 ![bushtit](/assets/images/posts/bushtit.jpg)
 
-The American bushtit is by far the smallest non-hummingbird dinosaur I've ever seen.  There were many of them in this one tree, hopping incessantly around from twig to twig, so it was hard to get them in focus long enough to take a picture.  Of course, all my pictures of them are from below.
+The American Bushtit is by far the smallest non-hummingbird dinosaur I've ever seen.  There were many of them in this one tree, hopping incessantly around from twig to twig, so it was hard to get them in focus long enough to take a picture.  Of course, all my pictures of them are from below.
 
 ![bewicks](/assets/images/posts/bewick's.jpg)
 
-Bewick's wrens are insectivores.  I like their white eyebrows.  Not much to say about this one.
+Bewick's Wrens are insectivores.  I like their white eyebrows.  Not much to say about this one.
 
 ![twohee](/assets/images/posts/twohee.jpg)
 
-California towhees are pretty drab, robin-sized birds, and are very common where I live.  They nest in poison oak and are known to attack their reflections in car mirrors.  I'm not sure if these two are a couple or just friends, but I was happy to get two in one shot.
+California Towhees are pretty drab, robin-sized birds, and are very common where I live.  They nest in poison oak and are known to attack their reflections in car mirrors.  I'm not sure if these two are a couple or just friends, but I was happy to get two in one shot.
