--- a/_posts/2020-10-28-dinophoto3.md
+++ b/_posts/2020-10-28-dinophoto3.md
@@ -12,7 +12,7 @@ Part 3 of my dinosaur photography series.  Lots of new birds!
 
 #### Cooper's Hawk
 
-I finally got some good pictures of a bird of prey, a Cooper's hawk that swooped into the trees above the dry canal near my house while I watched.  Other birds and even a squirrel sent up alarm calls at its presence, but it hung out for awhile before heading out.
+I finally got some good pictures of a bird of prey, a Cooper's Hawk that swooped into the trees above the dry canal near my house while I watched.  Other birds and even a squirrel sent up alarm calls at its presence, but it hung out for awhile before heading out.
 
 ![hawk1](/assets/images/posts/hawk-side.jpg)
 
@@ -24,7 +24,7 @@ He saw me!
 
 ![hawk4](/assets/images/posts/hawk-back.jpg)
 
-In this area we have quite a variety of similarly-sized, similarly-colored hawks.  With this one I was able to see it closely enough to identify it as a Cooper's, but often it's hard to tell the difference between that, sharp-shinned, red-shouldered, and Swainson's.  Red-taileds are easy to identify because they're huge, even though they come in light and dark color morphs.  White-tailed kites and American kestrels are similarly easy to identify because of their distinctively-colored plumage, and merlins are really little.  It's my goal to get a photo of each at some point!
+In this area we have quite a variety of similarly-sized, similarly-colored hawks.  With this one I was able to see it closely enough to identify it as a Cooper's, but often it's hard to tell the difference between that, Sharp-Shinned, Red-Shouldered, and Swainson's.  Red-Taileds are easy to identify because they're huge, even though they come in light and dark color morphs.  White-Tailed Kites and American Kestrels are similarly easy to identify because of their distinctively-colored plumage, and Merlins are really little.  It's my goal to get a photo of each at some point!
 
 #### Double-Crested Cormorant
 
@@ -36,7 +36,7 @@ One species of cormorant, the Galapagos, is huge and flightless, and the rest se
 
 ![cormorant2](/assets/images/posts/cormorant-swimming.jpg)
 
-These are called double-crested cormorants because in breeding season they grow these little white devil horn-like crests on either side of their head.  It's currently not breeding season, so their plumage is plain black, except for the juveniles, who retain a lighter chest.
+These are called Double-Crested Cormorants because in breeding season they grow these little white devil horn-like crests on either side of their head.  It's currently not breeding season, so their plumage is plain black, except for the juveniles, who retain a lighter chest.
 
 ![cormorant3](/assets/images/posts/cormorant-flying.jpg)
 
@@ -48,7 +48,7 @@ They love to congrgate on power-line towers.  I'm not really sure what the appea
 
 ![egret1](/assets/images/posts/egret.jpg)
 
-This is a snowy egret that was stalking in these little mud puddles.  It was being super careful not to make ripples and I was really excited to see him catch a tadpole or something.
+This is a Snowy Egret that was stalking in these little mud puddles.  It was being super careful not to make ripples and I was really excited to see him catch a tadpole or something.
 
 ![egret2](/assets/images/posts/egret-worm.jpg)
 
@@ -56,25 +56,25 @@ It was actually fishing for worms!  Do you really have to be that careful to cat
 
 ![egret3](/assets/images/posts/egret-flying.jpg)
 
-We have two types of egret in this area, the smaller, fluffier snowy egret and the large, sleek great egret.  Great egrets fly with their long necks tucked into a tight S-shape, unlike cormorants.  I'm not sure why some birds do and some don't.
+We have two types of egret in this area, the smaller, fluffier Snowy Egret and the large, sleek Great Egret.  Great Egrets fly with their long necks tucked into a tight S-shape, unlike cormorants.  I'm not sure why some birds do and some don't.
 
 ![black-necked-stilts](/assets/images/posts/stilts.jpg)
 
-Some black-necked stilts making tons of noise while foraging.
+Some Black-Necked Stilts making tons of noise while foraging.
 
 ![brown-pelican](/assets/images/posts/brown-pelican.jpg)
 
-Around here there are two types of pelicans, brown and white.  Here, a brown one takes off from the water, a feat that I think is pretty impressive given they can weigh over 10 pounds.  (That's still a lot less than the larger white pelican though.)
+Around here there are two types of pelicans, brown and white.  Here, a brown one takes off from the water, a feat that I think is pretty impressive given they can weigh over 10 pounds.  (That's still a lot less than the larger White Pelican though.)
 
 ![coot](/assets/images/posts/coot2.jpg)
 
-This is an American coot, a pretty unostentatious waterbird.  They took a completely different evolutionary path to paddle feet than most waterbirds; instead of webbed feet, they've expanded each toe into a wide oar shape.
+This is an American Coot, a pretty unostentatious waterbird.  They took a completely different evolutionary path to paddle feet than most waterbirds; instead of webbed feet, they've expanded each toe into a wide oar shape.
 
 #### Small Waterbirds
 
 ![willet1](/assets/images/posts/prize-2.jpg)
 
-Thin-billed shorebirds use their long beaks to probe the mud in search of burrowing invertebrates.  I caught this willet in the act of nabbing some kind of sand crab thing.  (Invertebrates, huh?)
+Thin-billed shorebirds use their long beaks to probe the mud in search of burrowing invertebrates.  I caught this Willet in the act of nabbing some kind of sand crab thing.  (Invertebrates, huh?)
 
 ![willet2](/assets/images/posts/prize-1.jpg)
 
@@ -82,17 +82,17 @@ He seems to be happy with his prize.  Probing as a foraging strategy has been ar
 
 ![curlew](/assets/images/posts/curlew-flying.jpg)
 
-This is a long-billed curlew, a minority among the numerous dowitchers, avocets, willets, whimbrels, godwits, plovers, gadwalls, stilts, and other birds with silly names. Perhaps there just isn't as much prey at the depths at which the curlew forages. The curlew probably takes the cake for most ridiculous beak--but wait, it has some competition from--
+This is a Long-Billed Curlew, a minority among the numerous dowitchers, avocets, willets, whimbrels, godwits, plovers, gadwalls, stilts, and other birds with silly names. Perhaps there just isn't as much prey at the depths at which the curlew forages. The curlew probably takes the cake for most ridiculous beak--but wait, it has some competition from--
 
 ![skimmer](/assets/images/posts/skimmer.jpg)
 
-The black skimmer, a relative of gulls and terns with a massive, bottom-biased bill.  Skimmers have a very different feeding strategy, in which they fly low over water and dip their lower mandible in, to catch fish and other sea creatures on the wing.  The water exerts huge forces as they do this, necessitating the gigantic bill.
+The Black Skimmer, a relative of gulls and terns with a massive, bottom-biased bill.  Skimmers have a very different feeding strategy, in which they fly low over water and dip their lower mandible in, to catch fish and other sea creatures on the wing.  The water exerts huge forces as they do this, necessitating the gigantic bill.
 
 The birds in this flock were ALL resting with their bills tucked under their wings.  I took photos nearly continuously and finally got one with a beak exposed.  I hope someday I can get a halfway decent photo of one!
 
 ![camo-pipers](/assets/images/posts/camo-pipers.jpg)
 
-How many least sandpipers can you find in this picture?  Zero?  Look more closely...I count eleven birds!  This is a beautiful example of countershading in action.  The birds have brown backs and white bellies.  The sun on their backs make them appear lighter in color, while the shade on their bellies make them appear darker, disguising the 3D shape of the animal.
+How many Least Sandpipers can you find in this picture?  Zero?  Look more closely...I count eleven birds!  This is a beautiful example of countershading in action.  The birds have brown backs and white bellies.  The sun on their backs make them appear lighter in color, while the shade on their bellies make them appear darker, disguising the 3D shape of the animal.
 
 ![camo-pipers-revealed](/assets/images/posts/camo-pipers-revealed.jpg)
 
@@ -100,29 +100,29 @@ There may even be more that I missed!
 
 ![killdeer](/assets/images/posts/killdeer.jpg)
 
-This is a flock of killdeer, a type of large plover.  They're called that because the sound they make sounds sort of like "killdeer," not because they kill any deer.  These ones were standing perfectly still--maybe they were sleeping?
+This is a flock of Killdeer, a type of large plover.  They're called that because the sound they make sounds sort of like "killdeer", not because they kill any deer.  These ones were standing perfectly still--maybe they were sleeping?
 
 ![plover](/assets/images/posts/plover.jpg)
 
-The one that looks a lot like the killdeer is a semipalmated plover, slightly smaller than the killdeer. The others are western sandpipers.  The group of sparrow-sized shorebirds including western, least, and other sandpipers are called "peeps".
+The one that looks a lot like the Killdeer is a Semipalmated Plover, slightly smaller than the Killdeer. The others are Western Sandpipers.  The group of sparrow-sized shorebirds including Western, Least, and other sandpipers are called "peeps".
 
 ![shorebird-diversity](/assets/images/posts/shorebird-diversity.jpg)
 
-A lot of the little shorebirds forage together in huge mixed flocks.  This one contains black turnstones (the one taking off), dunlins, plovers, and sandpipers.  These kind of flocks at first glance look like they just contain one or two types of birds, but if you're able to look more closely (this is where photography helps a lot), you can really appreciate the diversity!
+A lot of the little shorebirds forage together in huge mixed flocks.  This one contains Black Turnstones (the one taking off), Dunlins, plovers, and sandpipers.  These kind of flocks at first glance look like they just contain one or two types of birds, but if you're able to look more closely (this is where photography helps a lot), you can really appreciate the diversity!
 
 #### Domesticates and synanthropes
 
 ![emu-closeup](/assets/images/posts/emu-closeup.jpg)
 
-I just love watching the neighbor's emu.  His name is Peep-Peep!  He used to have two companion emus, but bears ate them and he is the lone survivor.
+I just love watching the neighbor's Emu.  His name is Peep-Peep!  He used to have two companion Emus, but bears ate them and he is the lone survivor.
 
 ![guinea](/assets/images/posts/guinea.jpg)
 
-The same neighbor also owns a flock of helmeted guineafowl.  Arguably even moreso than a chicken, a guineafowl looks like a big food with tiny legs and a tiny head.  They are very good at controlling tick populations--maybe this is why the neighbor has them, to protect his llamas, sheep, and goats.
+The same neighbor also owns a flock of Helmeted Guineafowl.  Arguably even moreso than a chicken, a guineafowl looks like a big food with tiny legs and a tiny head.  They are very good at controlling tick populations--maybe this is why the neighbor has them, to protect his llamas, sheep, and goats.
 
 ![leucistic-pigeon](/assets/images/posts/leucistic-pigeon.jpg)
 
-My second shiny, a leucistic rock dove (pigeon)!  The strange substance it's standing on is a beach made entirely of crushed shells.  What causes so many shells to congregate in one place?
+My second shiny, a leucistic Rock Dove (pigeon)!  The strange substance it's standing on is a beach made entirely of crushed shells.  What causes so many shells to congregate in one place?
 
 ![cute-pigreon](/assets/images/posts/cute-pigeon.jpg)
 
@@ -148,7 +148,7 @@ The way they open nuts is by holding them down firmly with their feet and peckin
 
 ![phoebe1](/assets/images/posts/black-phoebe.jpg)
 
-This is a black phoebe, a common sight where I live.
+This is a Black Phoebe, a common sight where I live.
 
 ![phoebe2](/assets/images/posts/phoebe-flying.jpg)
 
@@ -160,19 +160,19 @@ On the other hand, this one was very curious and friendly, and landed right in f
 
 ![says](/assets/images/posts/says-phoebe.jpg)
 
-Here's a closely-related bird, the Say's phoebe.  In the area I saw this one, there were these fields of iceplant with sort of randomly placed metal poles sticking up a couple feet.  The phoebes loved to sit on top of the poles and hop off every once in awhile for a quick flight to grab a flying insect, in a behavior called "sallying".  I wonder what they did before the poles were there?  Maybe there used to be tall grass before the invasive iceplant moved in, which they would perch on?  Or did they colonize this area because of those poles?  Or did someone put the poles in specifically for the phoebes?
+Here's a closely-related bird, the Say's Phoebe.  In the area I saw this one, there were these fields of iceplant with sort of randomly placed metal poles sticking up a couple feet.  The phoebes loved to sit on top of the poles and hop off every once in awhile for a quick flight to grab a flying insect, in a behavior called "sallying".  I wonder what they did before the poles were there?  Maybe there used to be tall grass before the invasive iceplant moved in, which they would perch on?  Or did they colonize this area because of those poles?  Or did someone put the poles in specifically for the phoebes?
 
 ![creeper](/assets/images/posts/creeper.jpg)
 
-This is a brown creeper, trying to blend into the bark of a redwood.  These guys acrobatically hop up trees like a squirrel, which I think is pretty impressive given they only use their legs to do so.
+This is a Brown Creeper, trying to blend into the bark of a redwood.  These guys acrobatically hop up trees like a squirrel, which I think is pretty impressive given they only use their legs to do so.
 
 ![creeper2](/assets/images/posts/creeper-3.jpg)
 
-A creeper from the side.  It's pretty attractive from this angle.
+A Creeper from the side.  It's pretty attractive from this angle.
 
 ![bluebird](/assets/images/posts/bluebird.jpg)
 
-This is a juvenile western bluebird.  It's not quite as blue as it will be as an adult.
+This is a juvenile Western Bluebird.  It's not quite as blue as it will be as an adult.
 
 ![bluebird2](/assets/images/posts/concerned-bluebird.jpg)
 
@@ -180,19 +180,19 @@ This one is watching me with concern.
 
 ![starling](/assets/images/posts/starling.jpg)
 
-This is a European starling.  They're invasive; some [crackpot](https://en.wikipedia.org/wiki/Eugene_Schieffelin) in the late 1800s decided that every bird mentioned in the works of William Shakespeare ought to live in the United States, so he introduced a couple flocks of starlings into Central Park.  Now they live everywhere and compete with native species for nesting sites and food, and damage crops with their huge voracious flocks.  They are very pretty though.  This one seems to have a religious bent.
+This is a European Starling.  They're invasive; some [crackpot](https://en.wikipedia.org/wiki/Eugene_Schieffelin) in the late 1800s decided that every bird mentioned in the works of William Shakespeare ought to live in the United States, so he introduced a couple flocks of Starlings into Central Park.  Now they live everywhere and compete with native species for nesting sites and food, and damage crops with their huge voracious flocks.  They are very pretty though.  This one seems to have a religious bent.
 
 ![golden-crowned](/assets/images/posts/golden-crowned.jpg)
 
-There are a variety of sparrow types where I live.  In my [first dino-photography post](https://obscuredinosaurfacts.com/blog/post/2020/08/19/dinophoto.html) I featured a savannah sparrow.  This one is a golden-crowned sparrow.
+There are a variety of sparrow types where I live.  In my [first dino-photography post](https://obscuredinosaurfacts.com/blog/post/2020/08/19/dinophoto.html) I featured a Savannah Sparrow.  This one is a Golden-Crowned Sparrow.
 
 ![white-crowned](/assets/images/posts/white-crowned.jpg)
 
-And this is a white-crowned sparrow.
+And this is a White-Crowned Sparrow.
 
 ![chickadee1](/assets/images/posts/chickadee-foraging.jpg)
 
-This is a new one for me--the chestnut-backed chickadee.  At first I was really confused, and thought it was a junco, or maybe a nuthatch.
+This is a new one for me--the Chestnut-Backed Chickadee.  At first I was really confused, and thought it was a junco, or maybe a nuthatch.
 
 ![chickadee2](/assets/images/posts/chickadee-pipe.jpg)
 
@@ -204,7 +204,7 @@ Here one is at the neighbor's feeder.  Finally, a diagnostic shot--definitely a 
 
 ![warbler](/assets/images/posts/warbler.jpg)
 
-This is an Audubon's yellow-rumped warbler, a winter visitor to where I live.  I like its yellow patches.
+This is an Audubon's Yellow-Rumped Warbler, a winter visitor to where I live.  I like its yellow patches.
 
 #### Repeats
 
@@ -212,19 +212,19 @@ These are birds I've featured before, but got some good new pictures of.
 
 ![towhee-look](/assets/images/posts/towhee-look.jpg)
 
-A California towhee, checking me out.
+A California Towhee, checking me out.
 
 ![oregon](/assets/images/posts/oregon.jpg)
 
-Another dark-eyed junco, this time the Oregon color morph.  This one is the most common around here.
+Another Dark-Eyed Junco, this time the Oregon color morph.  This one is the most common around here.
 
 ![humming](/assets/images/posts/humming-perched.jpg)
 
-A male Anna's hummingbird, resting.  The males make sounds like a laser.  Tsew, tsew!  They also have red throats, but due to the structural nature of the color and iridescence, it's only visible from straight on.
+A male Anna's Hummingbird, resting.  The males make sounds like a laser.  Tsew, tsew!  They also have red throats, but due to the structural nature of the color and iridescence, it's only visible from straight on.
 
 ![bewick1](/assets/images/posts/bewick-side.jpg)
 
-Last time I featured a rather low-res picture of a Bewick's wren.  This one let me get much closer.
+Last time I featured a rather low-res picture of a Bewick's Wren.  This one let me get much closer.
 
 ![bewick2](/assets/images/posts/bewick-front.jpg)
 
