--- a/_posts/2020-12-16-dinophoto4.md
+++ b/_posts/2020-12-16-dinophoto4.md
@@ -16,7 +16,7 @@ A lot of these birds are ones I've seen before, but many occur in greater or few
 
 ![coot-laugh](/assets/images/posts/coot-laugh.jpg)
 
-I've taken a photo of coots swimming before, but until now I'd never seen one on land in real life.  This one was very vigorously eating the leaves of this plant.
+I've taken a photo of Coots swimming before, but until now I'd never seen one on land in real life.  This one was very vigorously eating the leaves of this plant.
 
 ![coot-feet](/assets/images/posts/coot-feet2.jpg)
 
@@ -28,27 +28,27 @@ And you can see it a little more clearly here.
 
 ![avocet-gray](/assets/images/posts/avocet-gray.jpg)
 
-The American avocets I'd seen in the summer in great numbers with their distinctive red heads are now a small minority of the shorebirds at Baylands, and their red feather-tips have worn down to expose a more bland gray plumage.
+The American Avocets I'd seen in the summer in great numbers with their distinctive red heads are now a small minority of the shorebirds at Baylands, and their red feather-tips have worn down to expose a more bland gray plumage.
 
 ![stilt1](/assets/images/posts/stilt1.jpg)
 
-The black-necked stilts, which used to be a minority, are now abundant, although they look the same as always.
+The Black-Necked Stilts, which used to be a minority, are now abundant, although they look the same as always.
 
 ![shoveler](/assets/images/posts/shoveler.jpg)
 
-There were a few types of ducks present in large flocks that I hadn't really seen before.  This larger type, about mallard-sized, is a Northern shoveler, due to its spade-shaped beak end.
+There were a few types of ducks present in large flocks that I hadn't really seen before.  This larger type, about mallard-sized, is a Northern Shoveler, due to its spade-shaped beak end.
 
 ![teal](/assets/images/posts/teal2.jpg)
 
-This tiny, robin-sized duck is a green-winged teal.  So cute!
+This tiny, robin-sized duck is a Green-Winged Teal.  So cute!
 
 ![wigeon](/assets/images/posts/wigeon2.jpg)
 
-And this smallish duck is an American wigeon.  There weren't nearly as many of these as there were mallards, shovelers, and teals.  I really like their ribbony feathers on the back.
+And this smallish duck is an American Wigeon.  There weren't nearly as many of these as there were Mallards, Shovelers, and Teals.  I really like their ribbony feathers on the back.
 
 ![snowy1](/assets/images/posts/snowy2.jpg)
 
-There were quite a few snowy egrets skulking around these rocks.  There must be something there worth looking for.  I think its bicolored legs are pretty interesting.  What do you think that's for?
+There were quite a few Snowy Egrets skulking around these rocks.  There must be something there worth looking for.  I think its bicolored legs are pretty interesting.  What do you think that's for?
 
 ![snowy2](/assets/images/posts/snowy1.jpg)
 
@@ -60,7 +60,7 @@ You can see the kink better on this great egret finishing a strike.
 
 ![heron](/assets/images/posts/heron.jpg)
 
-Great egrets have all-black legs.  I guess whatever the snowy egret needs its yellow feet for is optional.
+Great Egrets have all-black legs.  I guess whatever the Snowy Egret needs its yellow feet for is optional.
 
 ![cormorant](/assets/images/posts/cormorant4.jpg)
 
@@ -76,7 +76,7 @@ In the same area where I saw all the above waterbirds, there were a variety of s
 
 ![savannah](/assets/images/posts/savannah4.jpg)
 
-This is a savannah sparrow, probably the most common around here.  I love how streaky they are.
+This is a Savannah Sparrow, probably the most common around here.  I love how streaky they are.
 
 ![savannah2](/assets/images/posts/savannah3.jpg)
 
@@ -84,33 +84,33 @@ This isn't the same individual, but look how different the bird's outline can lo
 
 ![white-crowned](/assets/images/posts/white-crowned1.jpg)
 
-Here's a much better photo of a white-crowned sparrow than in my last post.  She looks quite regal.
+Here's a much better photo of a White-Crowned Sparrow than in my last post.  She looks quite regal.
 
 ![song](/assets/images/posts/song.jpg)
 
-This is my first photo of a song sparrow.  They're very common in the United States in general, but less common where I live.  Their plumage is pretty boring compared to the white-crowned, golden-crowned, and savannah varieties.
+This is my first photo of a Song Sparrow.  They're very common in the United States in general, but less common where I live.  Their plumage is pretty boring compared to the White-Crowned, Golden-Crowned, and Savannah varieties.
 
 ![song2](/assets/images/posts/song2.jpg)
 
-The idiom "A bird in the hand is worth two in the bush" comes from old-school birding.  Actually, before good cameras were available, a bird in the hand (one you shot and examined at home) was probably worth way more than two in the bush (ones you observed and sketched in the wild).  Noticing attributes of birds that are living and moving around and comparing them to other, similar birds, is really hard.  Looking at photos or specimens makes it much easier to spot subtle differences.  In fact, it has recently been proven that a bird in the hand is worth [log(n)](https://arxiv.org/abs/1511.07428) in the bush, but the math is a bit hard to understand.  The above is another song sparrow, by the way.
+The idiom "A bird in the hand is worth two in the bush" comes from old-school birding.  Actually, before good cameras were available, a bird in the hand (one you shot and examined at home) was probably worth way more than two in the bush (ones you observed and sketched in the wild).  Noticing attributes of birds that are living and moving around and comparing them to other, similar birds, is really hard.  Looking at photos or specimens makes it much easier to spot subtle differences.  In fact, it has recently been proven that a bird in the hand is worth [log(n)](https://arxiv.org/abs/1511.07428) in the bush, but the math is a bit hard to understand.  The above is another Song Sparrow, by the way.
 
 ### Birds of Prey
 
 ![harrier](/assets/images/posts/harrier2.jpg)
 
-This is a northern harrier, a type of hawk with an owl-like facial disc.  I'd never seen one before!  All the shorebirds started making a racket and going up in flocks when the harrier showed up.  It must be lonely to be a carnivore.
+This is a Northern Harrier, a type of hawk with an owl-like facial disc.  I'd never seen one before!  All the shorebirds started making a racket and going up in flocks when the harrier showed up.  It must be lonely to be a carnivore.
 
 ![redtail2](/assets/images/posts/redtail2.jpg)
 
-This is a red-tailed hawk, the largest, most common, and most famous bird of prey in this area.  Look at those lovely eponymous tail feathers!  Red-tailed hawks come in light and dark color morphs; this one is a dark morph.
+This is a Red-Tailed Hawk, the largest, most common, and most famous bird of prey in this area.  Look at those lovely eponymous tail feathers!  Red-Tailed Hawks come in light and dark color morphs; this one is a dark morph.
 
 ![redtail3](/assets/images/posts/redtail3.jpg)
 
-This one made its presence known to me by repeatedly screaming.  That bird-of-prey sound you associate with bald eagles?  It's actually a red-tailed hawk.  Bald eagles make much less intimidating yipping noises.
+This one made its presence known to me by repeatedly screaming.  That bird-of-prey sound you associate with Bald Eagles?  It's actually a Red-Tailed Hawk.  Bald Eagles make much less intimidating yipping noises.
 
 ![redtail4](/assets/images/posts/redtail4.jpg)
 
-I often see red-tailed hawks being mobbed by flocks of crows.  I think the crows do it partly for entertainment.  That's one thing they never bring up in Animorphs: Tobias should *despise* crows.
+I often see Red-Tailed Hawks being mobbed by flocks of crows.  I think the crows do it partly for entertainment.  That's one thing they never bring up in Animorphs: Tobias should *despise* crows.
 
 ![redtail5](/assets/images/posts/redtail5.jpg)
 
@@ -118,15 +118,15 @@ This one seemed to be following some sort of beat.  It would fly from one treeto
 
 ![kite1](/assets/images/posts/kite1.jpg)
 
-This is (take my word for it) a white-tailed kite.  Two of these frequent this one open field, where they do this distinctive fluttering, hovering maneuver while they look for prey on the ground.  I think they're a breeding pair.  Unfortunately, they never land in this field and usually stay really high up, so I wasn't able to get any good pictures of them.  Maybe next time I'll have to figure out where they go when they leave the field.  They must land somewhere!
+This is (take my word for it) a White-Tailed Kite.  Two of these frequent this one open field, where they do this distinctive fluttering, hovering maneuver while they look for prey on the ground.  I think they're a breeding pair.  Unfortunately, they never land in this field and usually stay really high up, so I wasn't able to get any good pictures of them.  Maybe next time I'll have to figure out where they go when they leave the field.  They must land somewhere!
 
-Birds of prey are much harder to photograph than many other birds, probably just due to their trophic level.  As a rule of thumb, for every food-chain link higher, the available biomass decreases by 90%.  So that means if you have a field with 1000 kg of grass, it can support 100 kg of grass-eating animals (for example, insects), 10 kg of first-level predators (for example, bushtits--see below), and only 1 kg of second-level predators (for example, birds of prey).  They are therefore much rarer than birds lower on the food chain.
+Birds of prey are much harder to photograph than many other birds, probably just due to their trophic level.  As a rule of thumb, for every food-chain link higher, the available biomass decreases by 90%.  So that means if you have a field with 1000 kg of grass, it can support 100 kg of grass-eating animals (for example, insects), 10 kg of first-level predators (for example, Bushtits--see below), and only 1 kg of second-level predators (for example, birds of prey).  They are therefore much rarer than birds lower on the food chain.
 
 ### Others
 
 ![mourning](/assets/images/posts/doves.jpg)
 
-Here are a couple of mourning doves, looking very photogenic.
+Here are a couple of Mourning Doves, looking very photogenic.
 
 ![bushtit1](/assets/images/posts/bushtit1.jpg)
 
@@ -134,4 +134,4 @@ Bushtits are one of nature's great cleaning services.  A big flock of them enter
 
 ![titmouse](/assets/images/posts/titmouse-silhouette.jpg)
 
-This is an oak titmouse, posing beautifully with the sunset.  His little crest is so adorable.
+This is an Oak Titmouse, posing beautifully with the sunset.  His little crest is so adorable.
