--- a/_posts/2021-02-10-dinophoto5.md
+++ b/_posts/2021-02-10-dinophoto5.md
@@ -14,7 +14,7 @@ You probably know the drill by now.  Here are some photos of some new birds I've
 
 ![hawk](/assets/images/posts/hawk5.jpg)
 
-I spotted this light-morph red-tailed hawk from afar, sitting at the very top of this tree.  I hustled over to see if I could get some close-ups.
+I spotted this light-morph Red-Tailed Hawk from afar, sitting at the very top of this tree.  I hustled over to see if I could get some close-ups.
 
 ![hawk2](/assets/images/posts/hawk7.jpg)
 
@@ -30,129 +30,129 @@ Here's a dark-morph individual spotted elsewhere.
 
 ![redtail2](/assets/images/posts/redtail2.1.jpg)
 
-It's interesting how much variation there is in plumage between individuals of the same species.  It seems like most birds are nearly identical within their species to a human observer, but red-tails have a lot of intra-species visual diversity.
+It's interesting how much variation there is in plumage between individuals of the same species.  It seems like most birds are nearly identical within their species to a human observer, but Red-Tails have a lot of intra-species visual diversity.
 
 ![woodpecker](/assets/images/posts/acorn4-COLLAGE.jpg)
 
-These are acorn woodpeckers, a common sight in the dry forests of Northern California.  They live in large clans that defend valuable "granary trees," or dead trees that have had lots of holes pecked in them over the years, which the woodpeckers use to store acorns (since acorns are overabundant in a particular season and nonexistent outside it).  Acorn woodpeckers have complex societal relationships, and sometimes single-sex groups from outside a clan will go to battle with a particular group within the clan, with the intent of usurping their position.  The battles are fierce and last for days, and many uninvolved birds come to spectate.  Afterward, if the usurpers won, the clan accepts them as having earned their place at the granary tree.
+These are Acorn Woodpeckers, a common sight in the dry forests of Northern California.  They live in large clans that defend valuable "granary trees", or dead trees that have had lots of holes pecked in them over the years, which the woodpeckers use to store acorns (since acorns are overabundant in a particular season and nonexistent outside it).  Acorn Woodpeckers have complex societal relationships, and sometimes single-sex groups from outside a clan will go to battle with a particular group within the clan, with the intent of usurping their position.  The battles are fierce and last for days, and many uninvolved birds come to spectate.  Afterward, if the usurpers won, the clan accepts them as having earned their place at the granary tree.
 
 ![annas](/assets/images/posts/annas1-COLLAGE.jpg)
 
-Basically the only hummingbird we have around here is the Anna's hummingbird (supposedly rufous hummingbirds live here but I've never seen one).  Here are two different Anna's males, both with iridescent red heads--but you can really only see the red when the bird is directly facing you; otherwise it just looks black.  It's a good compromise between flashiness and camouflage!  Hummingbirds are the [crackheads of the bird world](https://www.youtube.com/watch?v=Biagyb7AcK8), a metaphor that is apt for many reasons.
+Basically the only hummingbird we have around here is the Anna's Hummingbird (supposedly Rufous Hummingbirds live here but I've never seen one).  Here are two different Anna's males, both with iridescent red heads--but you can really only see the red when the bird is directly facing you; otherwise it just looks black.  It's a good compromise between flashiness and camouflage!  Hummingbirds are the [crackheads of the bird world](https://www.youtube.com/watch?v=Biagyb7AcK8), a metaphor that is apt for many reasons.
 
 ### Passerines
 
 ![mockingbird](/assets/images/posts/mockingbird1.jpg)
 
-This is a northern mockingbird, which I was pretty happy to be able to get a good picture of, since they're not super abundant and are often found in bushes.  I like how its tail is held so erect--it reminds me of a dromaeosaur (raptor dinosaur).
+This is a Northern Mockingbird, which I was pretty happy to be able to get a good picture of, since they're not super abundant and are often found in bushes.  I like how its tail is held so erect--it reminds me of a dromaeosaur (raptor dinosaur).
 
 ![warbler1](/assets/images/posts/warbler1-COLLAGE.jpg)
 
-This is a yellow-rumped warbler, a winter-only sight here in Northern California.  I've posted a picture of one earlier this winter, but these photos are a lot better.
+This is a Yellow-Rumped Warbler, a winter-only sight here in Northern California.  I've posted a picture of one earlier this winter, but these photos are a lot better.
 
 ![towhee-robin](/assets/images/posts/spotted-towhee-COLLAGE.jpg)
 
-Here are some birds in the bush that were rather hard to get pictures of.  The left is an American robin, though I'd never seen them hanging out inside of bushes before.  Usually they're out in the open (although this is probably sampling bias, since it's easier to see ones that are out in the open).  On the right is a spotted towhee, a very elusive and cagey relative of the much commoner California towhee.  I've often seen spotted towhees in bushes but am too slow to get a good shot before they fly off.  Birds are good at knowing when you're paying attention to them.
+Here are some birds in the bush that were rather hard to get pictures of.  The left is an American Robin, though I'd never seen them hanging out inside of bushes before.  Usually they're out in the open (although this is probably sampling bias, since it's easier to see ones that are out in the open).  On the right is a Spotted Towhee, a very elusive and cagey relative of the much commoner California Towhee.  I've often seen Spotted Towhees in bushes but am too slow to get a good shot before they fly off.  Birds are good at knowing when you're paying attention to them.
 
 ![titmouse](/assets/images/posts/titmouse-1-COLLAGE.jpg)
 
-My friend read my [post](https://obscuredinosaurfacts.com/blog/post/2020/12/23/feeder.html) about the coin-operated crow feeder, and suggested that I test out the popularity of the various foods before assigning dollar values to them.  So, I put some samples out on my balcony and observed what disappeared quickest.  I also watched to see who was taking the food, since the goal was to gauge crows' preferences rather than other birds', but the crows are very stealthy, and I haven't been able to get a photo of them in the act yet.  However, this oak titmouse was okay with being photographed as it made multiple return trips for more birdseed.
+My friend read my [post](https://obscuredinosaurfacts.com/blog/post/2020/12/23/feeder.html) about the coin-operated crow feeder, and suggested that I test out the popularity of the various foods before assigning dollar values to them.  So, I put some samples out on my balcony and observed what disappeared quickest.  I also watched to see who was taking the food, since the goal was to gauge crows' preferences rather than other birds', but the crows are very stealthy, and I haven't been able to get a photo of them in the act yet.  However, this Oak Titmouse was okay with being photographed as it made multiple return trips for more birdseed.
 
 ![sparrow1](/assets/images/posts/sparrow5.jpg)
 
-I caught this savannah sparrow in an interesting pose.
+I caught this Savannah Sparrow in an interesting pose.
 
 ![sparrow2](/assets/images/posts/sparrow3.jpg)
 
-The song sparrows were foraging on the ground in small flocks.  I wonder what they're looking for?
+The Song Sparrows were foraging on the ground in small flocks.  I wonder what they're looking for?
 
 ![sparrow3](/assets/images/posts/sparrow.jpg)
 
-It's kind of crazy how many different types of sparrows cohabitate, including this white-crowned.  How do they all [niche partition](https://obscuredinosaurfacts.com/blog/post/2020/10/21/niche.html)?
+It's kind of crazy how many different types of sparrows cohabitate, including this White-Crowned.  How do they all [niche partition](https://obscuredinosaurfacts.com/blog/post/2020/10/21/niche.html)?
 
 ![sparrow4](/assets/images/posts/sparrow-3.jpg)
 
-This individual was part of a ground-foraging flock of golden-crowned sparrows and spotted towhees.  Of course, the towhees were much too shy for me to get any pictures.
+This individual was part of a ground-foraging flock of Golden-Crowned Sparrows and Spotted Towhees.  Of course, the towhees were much too shy for me to get any pictures.
 
 ![hermit-titmouse](/assets/images/posts/titmouse-and-hermit.jpg)
 
-I was happy to get this photo of an oak titmouse and a hermit thrush together on the path.  They both blend in quite well to the fallen leaves.
+I was happy to get this photo of an Oak Titmouse and a hermit thrush together on the path.  They both blend in quite well to the fallen leaves.
 
 ![hermit](/assets/images/posts/hermit-3.jpg)
 
-Hermit thrushes are a bit easier to spot among the greenery.  They're still pretty elusive though.  This, and the spotted towhee, are some of the only landbirds in my area that I've noticed only occur in nature preserves, and don't venture into neighborhoods.
+Hermit Thrushes are a bit easier to spot among the greenery.  They're still pretty elusive though.  This, and the Spotted Towhee, are some of the only landbirds in my area that I've noticed only occur in nature preserves, and don't venture into neighborhoods.
 
 ![starling](/assets/images/posts/woop3.jpg)
 
-This European starling was by himself in this tree, making noises that went like this: "Whew. Whew. WhooooooOOOOoooooo."  It was very odd; I hadn't heard a bird make such a sound before.  Maybe it was mimicking a siren.
+This European Starling was by himself in this tree, making noises that went like this: "Whew. Whew. WhooooooOOOOoooooo."  It was very odd; I hadn't heard a bird make such a sound before.  Maybe it was mimicking a siren.
 
 ![tanager](/assets/images/posts/goldfinch1.jpg)
 
-As with most of my first pictures of a particular bird, this picture of a western tanager is rather awful and partially obstructed.  Hopefully I'll get a better one in the future--and hopefully one of a male with a bright red head!  Currently, the red feather tips are mostly worn away, since it's not breeding season.
+As with most of my first pictures of a particular bird, this picture of a Western Tanager is rather awful and partially obstructed.  Hopefully I'll get a better one in the future--and hopefully one of a male with a bright red head!  Currently, the red feather tips are mostly worn away, since it's not breeding season.
 
 ### Waterbirds
 
 ![heron](/assets/images/posts/heron-2.jpg)
 
-Great blue herons are pretty common around here, but I'd yet to get a photo of one.  They're so big and charismatic.  They make even the great egrets look skinny and underwhelming.
+Great Blue Herons are pretty common around here, but I'd yet to get a photo of one.  They're so big and charismatic.  They make even the Great Egrets look skinny and underwhelming.
 
 ![egret](/assets/images/posts/egret-2.jpg)
 
-This is a great egret.  I was happy with how the reflection in the water was captured.
+This is a Great Egret.  I was happy with how the reflection in the water was captured.
 
 ![gull](/assets/images/posts/gull-1.jpg)
 
-Around here, many types of gulls coexist.  This is a ring-billed gull.
+Around here, many types of gulls coexist.  This is a Ring-Billed Gull.
 
 ![gull2](/assets/images/posts/gull1.jpg)
 
-And this is a California gull.  We also have herring gulls, western gulls, Iceland gulls, glaucous-winged gulls, and more.  Often it's hard to tell the difference without a really good photo.  Even then, I have to check my [gull identification flowchart](https://imgur.com/gallery/EPqFWwP)!
+And this is a California Gull.  We also have Herring Gulls, Western Gulls, Iceland Gulls, Glaucous-Winged Gulls, and more.  Often it's hard to tell the difference without a really good photo.  Even then, I have to check my [gull identification flowchart](https://imgur.com/gallery/EPqFWwP)!
 
 ![grebe](/assets/images/posts/grebe2.jpg)
 
-Here's a western grebe, which I referred to tangentially in my *Pterodaustro* post, since that pterosaur's eggs are comparable chemically to those of grebes and flamingos.  Grebes make floating nests out of vegetation, and carry their young on their backs.  Like many waterbirds, grebes are not very good walkers due to their legs being so far back on their body, and they take off and land directly on the water.
+Here's a Western Grebe, which I referred to tangentially in my *Pterodaustro* post, since that pterosaur's eggs are comparable chemically to those of grebes and flamingos.  Grebes make floating nests out of vegetation, and carry their young on their backs.  Like many waterbirds, grebes are not very good walkers due to their legs being so far back on their body, and they take off and land directly on the water.
 
 ![grebe2](/assets/images/posts/pied-grebe-2.jpg)
 
-This is a much smaller type of grebe, called a pied-billed grebe.  Even though grebes hang out among the ducks, they aren't closely related to them (ducks, chickens, and other fowl form their own family, which is more basal than the family containing most other birds, the Neoaves).
+This is a much smaller type of grebe, called a Pied-Billed Grebe.  Even though grebes hang out among the ducks, they aren't closely related to them (ducks, chickens, and other fowl form their own family, which is more basal than the family containing most other birds, the Neoaves).
 
 ![killdeer](/assets/images/posts/killdeer-1.jpg)
 
-I've featured killdeer [two photography posts](https://obscuredinosaurfacts.com/blog/post/2020/10/28/dinophoto3.html) ago, but here's a more close-up view.  You can tell the difference between killdeer and the closely related and range-overlapping semipalmated plover by the neck bands: killdeer have two black bands, while semipalmated plovers have only one.  In *Sibley's Birding Basics*, the author laments about how the name "killdeer" makes no sense and gives one no clues as to this animal's affinities.  I would tend to agree--maybe "killdeer plover" would be a more informative name?
+I've featured Killdeer [two photography posts](https://obscuredinosaurfacts.com/blog/post/2020/10/28/dinophoto3.html) ago, but here's a more close-up view.  You can tell the difference between Killdeer and the closely related and range-overlapping semipalmated plover by the neck bands: Killdeer have two black bands, while semipalmated plovers have only one.  In *Sibley's Birding Basics*, the author laments about how the name "Killdeer" makes no sense and gives one no clues as to this animal's affinities.  I would tend to agree--maybe "Killdeer plover" would be a more informative name?
 
 ![yellowlegs](/assets/images/posts/yellowlegs-2.jpg)
 
-This is a greater yellowlegs, a type of wading bird that looks quite similar to the also-found-here willets and dunlins.  Thankfully, this one has an informative name, since the other similar birds do not have yellow legs!
+This is a Greater Yellowlegs, a type of wading bird that looks quite similar to the also-found-here Willets and Dunlins.  Thankfully, this one has an informative name, since the other similar birds do not have yellow legs!
 
 ![sandpipers](/assets/images/posts/sandpipers-1.jpg)
 
-Here's a photo in which you can actually see all the least sandpipers, unlike in my previous post.
+Here's a photo in which you can actually see all the Least Sandpipers, unlike in my previous post.
 
 ![black-crowned](/assets/images/posts/nightheron1.jpg)
 
-We actually have a fourth type of heron/egret around here, the black-crowned night heron.  As their name implies, these are very unassuming during the day, and mostly hide amongst reeds and wherever else they nest.  However, at night (when I can't take pictures of them), they often stand on lawns in huge, socially distanced groups--about one bird every six feet or so, arrayed evenly across the grass.  If you disturb them, they fly up into the surrounding trees and make a bunch of noise.  What the heck are they up to?
+We actually have a fourth type of heron/egret around here, the Black-Crowned Night Heron.  As their name implies, these are very unassuming during the day, and mostly hide amongst reeds and wherever else they nest.  However, at night (when I can't take pictures of them), they often stand on lawns in huge, socially distanced groups--about one bird every six feet or so, arrayed evenly across the grass.  If you disturb them, they fly up into the surrounding trees and make a bunch of noise.  What the heck are they up to?
 
 ![cormorants](/assets/images/posts/cormorants1.jpg)
 
-As usual, here are some double-crested cormorants on poles.  This time they're hanging out with some California gulls.
+As usual, here are some Double-Crested Cormorants on poles.  This time they're hanging out with some California Gulls.
 
 ### Fowl
 
 ![pintails](/assets/images/posts/pintails-2.jpg)
 
-These are some northern pintails, a kind of duck.
+These are some Northern Pintails, a kind of duck.
 
 ![pintails2](/assets/images/posts/pintails-3.jpg)
 
-Here's a pintail hanging out with a pied-billed grebe.
+Here's a Pintail hanging out with a Pied-Billed Grebe.
 
 ![duck-family](/assets/images/posts/duck-family.jpg)
 
-This very motley flock of ducks contains numerous feral domesticated mallards.  Mallards and Muscovy ducks are the only ducks that have been domesticated, and are sometimes bred for color, like the black one with the white breast, the one with the blue head, and the pure white ones here.  Perhaps they all knew each other in their previous life before they got loose, and chose to stick together.  Or maybe wild duck society shunned them for their strange looks so they banded together from necessity.  Apparently males have curly tail feathers, indicating that the black one and white ones are females.
+This very motley flock of ducks contains numerous feral domesticated Mallards.  Mallards and Muscovy Ducks are the only ducks that have been domesticated, and are sometimes bred for color, like the black one with the white breast, the one with the blue head, and the pure white ones here.  Perhaps they all knew each other in their previous life before they got loose, and chose to stick together.  Or maybe wild duck society shunned them for their strange looks so they banded together from necessity.  Apparently males have curly tail feathers, indicating that the black one and white ones are females.
 
 ![goose](/assets/images/posts/goose1.jpg)
 
-Everyone can recognize Canada geese, which are often aggressive and pesky, and poop all over the softball field.  However, I think they're still pretty handsome.
+Everyone can recognize Canada Geese, which are often aggressive and pesky, and poop all over the softball field.  However, I think they're still pretty handsome.
 
 ![goose2](/assets/images/posts/goose2.jpg)
 
