--- a/_posts/2021-06-16-dinophoto6.md
+++ b/_posts/2021-06-16-dinophoto6.md
@@ -36,19 +36,19 @@ Cardinals were definitely on my list--we don't have anything like them in Califo
 
 ![cardinal2](/assets/images/posts/fcard.jpg)
 
-Female cardinals are a lot more disheveled looking than the males.  Or perhaps this is a juvenile.
+Female Cardinals are a lot more disheveled looking than the males.  Or perhaps this is a juvenile.
 
 ![nuthatch](/assets/images/posts/nuthatch-1.jpg)
 
-This is one that we have in California too: the white-breasted nuthatch.  They always do this arched-back upside-down pose.
+This is one that we have in California too: the White-Breasted Nuthatch.  They always do this arched-back upside-down pose.
 
 ![catbird](/assets/images/posts/catbird.jpg)
 
-The gray catbird is a relative of our northern mockingbird that goes "mew".
+The gray catbird is a relative of our Northern Mockingbird that goes "mew".
 
 ![grackle1](/assets/images/posts/grackle.jpg)
 
-This is a common grackle, which is in the same family (icterids) as blackbirds and orioles.
+This is a Common Grackle, which is in the same family (icterids) as blackbirds and orioles.
 
 ![grackle2](/assets/images/posts/grackle-membranes.jpg)
 
@@ -56,7 +56,7 @@ Check out those nictitating membranes (secondary eyelids)!
 
 ![spcouple](/assets/images/posts/spcouple.jpg)
 
-Two house sparrow couples live in the birdhouses in the backyard.  Here's the couple that lives in the red house feeding together.
+Two House Sparrow couples live in the birdhouses in the backyard.  Here's the couple that lives in the red house feeding together.
 
 ![housekeeper](/assets/images/posts/housekeeper.jpg)
 
@@ -64,27 +64,27 @@ Here's the female peeking out of her house.  Isn't she adorable?
 
 ![house2](/assets/images/posts/house-2.jpg)
 
-Here's the male looking handsome in a flowering bush.  House sparrows are not native to the Americas, but were introduced in the mid-1800s and are now found all over the world.
+Here's the male looking handsome in a flowering bush.  House Sparrows are not native to the Americas, but were introduced in the mid-1800s and are now found all over the world.
 
 ![mating](/assets/images/posts/mating.jpg)
 
-And here they are doing the deed.  Both house sparrow couples were mating often, and neither had any eggs laid in their houses yet.  I'm not really sure what the timeline is, but I'd expect eggs to start showing up soon!
+And here they are doing the deed.  Both House Sparrow couples were mating often, and neither had any eggs laid in their houses yet.  I'm not really sure what the timeline is, but I'd expect eggs to start showing up soon!
 
 ![gold](/assets/images/posts/gold-2.jpg)
 
-Here's a male and two female American goldfinches.
+Here's a male and two female American Goldfinches.
 
 ![fight](/assets/images/posts/fight.jpg)
 
-A female red-winged blackbird chases off a female American goldfinch while a male house sparrow watches.  So many types of birds in one place!
+A female Red-Winged Blackbird chases off a female American Goldfinch while a male House Sparrow watches.  So many types of birds in one place!
 
 ![houseandgold](/assets/images/posts/houseandgold.jpg)
 
-A male American goldfinch watches a male house sparrow, who ignores him.
+A male American Goldfinch watches a male House Sparrow, who ignores him.
 
 ![housewren](/assets/images/posts/housewren-COLLAGE.jpg)
 
-In the front yard, this birdhouse was occupied by house wrens.
+In the front yard, this birdhouse was occupied by House Wrens.
 
 ### At the Swamp
 
@@ -92,19 +92,19 @@ There's a nature path near the house, where we went to look for more birds.
 
 ![greenheron](/assets/images/posts/greenheron.jpg)
 
-This is a green heron.  Theoretically we have these in California too, but I've never seen one.
+This is a Green Heron.  Theoretically we have these in California too, but I've never seen one.
 
 ![kestrel](/assets/images/posts/kestrel.jpg)
 
-An American kestrel, the fairy princess of falcons, is dive-bombed by common grackles at the tippy top of a tall tree.  We also have American kestrels in the Central Valley in California, but I've never been able to get a good picture (I guess I still haven't).
+An American Kestrel, the fairy princess of falcons, is dive-bombed by Common Grackles at the tippy top of a tall tree.  We also have American Kestrels in the Central Valley in California, but I've never been able to get a good picture (I guess I still haven't).
 
 ![song1](/assets/images/posts/song-1.jpg)
 
-This song sparrow let me get really close.  I've featured these before, but I think this is the most zoomed-in picture of one I've been able to get so far.
+This Song Sparrow let me get really close.  I've featured these before, but I think this is the most zoomed-in picture of one I've been able to get so far.
 
 ![woodpecker](/assets/images/posts/woodpecker.jpg)
 
-This is a red-bellied woodpecker (although I don't really see its red belly).  I still wonder, what about the woodpecker lifestyle makes it advantageous to have a red cap?
+This is a Red-Bellied Woodpecker (although I don't really see its red belly).  I still wonder, what about the woodpecker lifestyle makes it advantageous to have a red cap?
 
 ### At the Lake
 
@@ -112,11 +112,11 @@ I was able to get a few more bird photos on a walk around a nearby lake.  Appare
 
 ![cowbird](/assets/images/posts/cowbird.jpg)
 
-The brown-headed cowbird is in the blackbird family, but acts like a cuckoo, laying up to three dozen eggs a season in other birds' nests.
+The Brown-Headed Cowbird is in the blackbird family, but acts like a cuckoo, laying up to three dozen eggs a season in other birds' nests.
 
 ![swallows](/assets/images/posts/swallows.jpg)
 
-These tree swallows were flitting above the water, probably catching insects and/or drinking.  Swallows can go their whole lives without ever touching the ground.  They're like fish of the air!
+These Tree Swallows were flitting above the water, probably catching insects and/or drinking.  Swallows can go their whole lives without ever touching the ground.  They're like fish of the air!
 
 ![swallows-2](/assets/images/posts/swallows-2.jpg)
 
@@ -124,12 +124,12 @@ You can see the extreme torpedo-like shape of the swallow body better here.
 
 ![goslings](/assets/images/posts/gosling.jpg)
 
-We also saw some Canada geese with goslings in tow.  Apparently these are pretty large for this time of year, indicating they hatched a bit early.  #globalwarming
+We also saw some Canada Geese with goslings in tow.  Apparently these are pretty large for this time of year, indicating they hatched a bit early.  #globalwarming
 
 ![bluejay](/assets/images/posts/bluejay.jpg)
 
-Another one I really wanted to see while I was in New York was the blue jay, since we don't have them in California and they're so iconic.  Thankfully I was able to get a picture of one on my last day there!
+Another one I really wanted to see while I was in New York was the Blue Jay, since we don't have them in California and they're so iconic.  Thankfully I was able to get a picture of one on my last day there!
 
 ![bluejays](/assets/images/posts/bluejays.jpg)
 
-A pair of blue jays--so exciting!  Blue jays are so much more glamorous than scrub jays and Steller's jays.  Such clean lines.
+A pair of Blue Jays--so exciting!  Blue Jays are so much more glamorous than scrub jays and Steller's jays.  Such clean lines.
