--- a/_posts/2022-07-27-dinophoto8.md
+++ b/_posts/2022-07-27-dinophoto8.md
@@ -12,11 +12,11 @@ Also on my trip to Boston, I took the opportunity to get some photos of the loca
 
 ### Walden Pond
 
-Walden Pond, where the famous nineteenth-century transcendentalist Henry David Thoreau [lived in a cabin](https://obscuredinosaurfacts.com/blog/post/2021/06/30/walden.html) for a couple of years, has some nice hiking trails through the lush East Coast woods. We heard more birds than we saw--Eastern wood pewees and wood thrushes were hard to spot among the dense foliage. But I did get a few photos of the local wildlife.
+Walden Pond, where the famous nineteenth-century transcendentalist Henry David Thoreau [lived in a cabin](https://obscuredinosaurfacts.com/blog/post/2021/06/30/walden.html) for a couple of years, has some nice hiking trails through the lush East Coast woods. We heard more birds than we saw--Eastern Wood Pewees and Wood Thrushes were hard to spot among the dense foliage. But I did get a few photos of the local wildlife.
 
 ![titmouse](/assets/images/posts/titmouse-boston.jpg)
 
-On the West Coast, we have oak titmice, but in most of the rest of the country, they have tufted titmice. They look quite similar to ours, but their ranges don't overlap, so it's easy to tell them apart.
+On the West Coast, we have Oak Titmice, but in most of the rest of the country, they have Tufted Titmice. They look quite similar to ours, but their ranges don't overlap, so it's easy to tell them apart.
 
 ![titmice](/assets/images/posts/titmice-boston.jpg)
 
@@ -24,11 +24,11 @@ I don't think I've ever seen two wild birds hanging on opposite sides of a branc
 
 ![nuthatch](/assets/images/posts/nuthatch-boston.jpg)
 
-We have white-breasted nuthatches on the West Coast as well, but this one was particularly bold, so I was able to get more of a close-up than I've gotten before. I'm always impressed by birds that can climb upside-down. Unlike mammals, they only have one set of limbs to use!
+We have White-Breasted Nuthatches on the West Coast as well, but this one was particularly bold, so I was able to get more of a close-up than I've gotten before. I'm always impressed by birds that can climb upside-down. Unlike mammals, they only have one set of limbs to use!
 
 ![catbird](/assets/images/posts/catbird-boston-1.jpg)
 
-The West Coast equivalent of the gray catbird is the northern mockingbird. This catbird seemed to be used to people and approached me closely. Actually, it seems like a lot of birds in Boston are quite unafraid of people.
+The West Coast equivalent of the Gray Catbird is the Northern Mockingbird. This catbird seemed to be used to people and approached me closely. Actually, it seems like a lot of birds in Boston are quite unafraid of people.
 
 ![catbird2](/assets/images/posts/catbird-boston-2.jpg)
 
@@ -48,7 +48,7 @@ When I was leaving Concord to take the commuter rail to downtown Boston, this be
 
 ### Shorebirds
 
-The first bird I saw after stepping off the train from the airport was not a pigeon or a sparrow, but an enormous American herring gull stealing a hot dog directly out of a tourist's hands.
+The first bird I saw after stepping off the train from the airport was not a pigeon or a sparrow, but an enormous American Herring Gull stealing a hot dog directly out of a tourist's hands.
 
 ![gull](/assets/images/posts/gullfry-boston.jpg)
 
@@ -56,7 +56,7 @@ Rather than being upset, the victims seemed amused and fed it lots of French fri
 
 ![gull2](/assets/images/posts/gullportrait-boston.jpg)
 
-American herring gulls are quite handsome.
+American Herring Gulls are quite handsome.
 
 ![gull3](/assets/images/posts/swimming-gull.jpg)
 
@@ -64,7 +64,7 @@ While intellectually I know that gulls spend a lot of time on the open ocean and
 
 ![tern](/assets/images/posts/tern-still.jpg)
 
-While on the West Coast we have Caspian terns or Forster's terns, which I've never seen in groups of more than one, in Boston they have the common tern, which gathers in big flocks.
+While on the West Coast we have Caspian Terns or Forster's Terns, which I've never seen in groups of more than one, in Boston they have the Common Tern, which gathers in big flocks.
 
 ![terns](/assets/images/posts/many-terns.jpg)
 
@@ -76,7 +76,7 @@ This tern not only has caught a fish, but is showing its patriotic Bostonian spi
 
 ![cormorant](/assets/images/posts/cormorant-2.jpg)
 
-Double-crested cormorants are also common on the West Coast. These ones were hanging out near the USS Constitution.
+Double-Crested Cormorants are also common on the West Coast. These ones were hanging out near the USS Constitution.
 
 ![cormorant2](/assets/images/posts/cormorant-3.jpg)
 
@@ -84,11 +84,11 @@ I guess if a cormorant can't find a perch from which to dry its wings, or is too
 
 ### House Sparrows
 
-While house sparrows are invasive and are also found on the West Coast, I can't help but like them. They're so busy and active, and they seem to have their own little civilization going on in the middle of ours. They build houses, take baths, and have councils and domestic disputes. They're undeniably individuals.
+While House Sparrows are invasive and are also found on the West Coast, I can't help but like them. They're so busy and active, and they seem to have their own little civilization going on in the middle of ours. They build houses, take baths, and have councils and domestic disputes. They're undeniably individuals.
 
 ![house1](/assets/images/posts/house-boston-1.jpg)
 
-The second bird I saw upon arriving was an audacious house sparrow lady who investigated me while I was sitting in the grass.
+The second bird I saw upon arriving was an audacious House Sparrow lady who investigated me while I was sitting in the grass.
 
 ![house2](/assets/images/posts/house-fluff.jpg)
 
@@ -112,11 +112,11 @@ Weathered old gravestones were popular places to perch.
 
 ### Starlings
 
-Another invasive but charismatic species found across the country is the European starling. And again, I was able to witness a variety of behavior I hadn't seen before!
+Another invasive but charismatic species found across the country is the European Starling. And again, I was able to witness a variety of behavior I hadn't seen before!
 
 ![starling](/assets/images/posts/starlings-feeding.jpg)
 
-Here, an adult starling feeds something to its fledgling. I often think it's weird that young birds are the same size as the adults, but still beg for food from their parents. But then I remember that human 14-year-olds are often taller than their parents, who still make them grilled cheese sandwiches. It's just part of being an **altricial** species!
+Here, an adult Starling feeds something to its fledgling. I often think it's weird that young birds are the same size as the adults, but still beg for food from their parents. But then I remember that human 14-year-olds are often taller than their parents, who still make them grilled cheese sandwiches. It's just part of being an **altricial** species!
 
 ![starling2](/assets/images/posts/starlings-boston-2.jpg)
 
@@ -124,11 +124,11 @@ They've gone up into a tree. The youngster looks a little disheveled.
 
 ![starling3](/assets/images/posts/starling-bath.jpg)
 
-Here, a starling takes a bath in a puddle, while a male house finch waits his turn.
+Here, a Starling takes a bath in a puddle, while a male House Finch waits his turn.
 
 ### Others
 
-The rock pigeons in Boston seemed much healthier than other urban pigeons, which are usually mangy-looking and missing toes.
+The Rock Pigeons in Boston seemed much healthier than other urban pigeons, which are usually mangy-looking and missing toes.
 
 ![pigeon](/assets/images/posts/statue-pigeon.jpg)
 
@@ -140,11 +140,11 @@ As in San Francisco, the pigeons in Boston were doing courtship dances. The male
 
 ![ducks](/assets/images/posts/ducks-boston.jpg)
 
-Some of the mallards had ducklings. They are so handful-shaped! I want to pick one up.
+Some of the Mallards had ducklings. They are so handful-shaped! I want to pick one up.
 
 ![sparrow](/assets/images/posts/sparrow-boston-1.jpg)
 
-It wasn't ALL house sparrows in Boston--only 99% house sparrows. Here's a proudly defiant song sparrow.
+It wasn't ALL House Sparrows in Boston--only 99% House Sparrows. Here's a proudly defiant Song Sparrow.
 
 ![bunny](/assets/images/posts/graveyard-bunny.jpg)
 
@@ -152,7 +152,7 @@ Perhaps this bunny is eating some atoms that were once part of Samuel Adams.
 
 ![papaya](/assets/images/posts/papaya.jpg)
 
-Bonus! Not in Boston, but I visited a plant store that had a couple of resident birds. This is a pearl cockatiel named Papaya.
+Bonus! Not in Boston, but I visited a plant store that had a couple of resident birds. This is a pearled Cockatiel named Papaya.
 
 ![me-papaya](/assets/images/posts/me-and-papaya.jpg)
 
