--- a/_posts/2022-10-05-dinophoto9.md
+++ b/_posts/2022-10-05-dinophoto9.md
@@ -24,39 +24,39 @@ The weather was monsoon-y: blue skies one moment, impressive downpour the next. 
 
 ![anhinga-1](/assets/images/posts/anhinga-1.jpg)
 
-While I didn't come at peak anhinga season, I was lucky to see a single anhinga on the famed Anhinga Trail. I'd almost given up on seeing one, and when I was heading back to the car, there he was. This one is probably an immature male, with his baby brown head and neck starting to turn black.
+While I didn't come at peak Anhinga season, I was lucky to see a single Anhinga on the famed Anhinga Trail. I'd almost given up on seeing one, and when I was heading back to the car, there he was. This one is probably an immature male, with his baby brown head and neck starting to turn black.
 
 ![anhinga-2](/assets/images/posts/anhinga-2.jpg)
 
-Anhingas are also known as "snake birds" because when they swim, only their long neck and head are visible above the water. They're related to, but not the same as, cormorants, and while they do the same horaltic wing-drying pose, anhingas are better fliers, with broader wings enabling them to soar without flapping, but worse swimmers, ambushing fish instead of chasing them. Cormorants have a hooked upper bill for grabbing fish, while anhingas have a straight bill for spearing.
+Anhingas are also known as "snake birds" because when they swim, only their long neck and head are visible above the water. They're related to, but not the same as, cormorants, and while they do the same horaltic wing-drying pose, Anhingas are better fliers, with broader wings enabling them to soar without flapping, but worse swimmers, ambushing fish instead of chasing them. Cormorants have a hooked upper bill for grabbing fish, while anhingas have a straight bill for spearing.
 
 ![black](/assets/images/posts/black-1-COLLAGE.jpg)
 
-In addition to turkey vultures, which live all across the US, in Florida there are black vultures, which look similar but they have larger heads with bald, black skin. They don't have as good a sense of smell as turkey vultures, and are known to follow turkey vultures around to locate a carcass.
+In addition to Turkey Vultures, which live all across the US, in Florida there are Black Vultures, which look similar but they have larger heads with bald, black skin. They don't have as good a sense of smell as Turkey Vultures, and are known to follow Turkey Vultures around to locate a carcass.
 
 ![vulture-party](/assets/images/posts/black-2.jpg)
 
-There were lots of black vultures riding thermals above the river of grass. They never descended close enough for me to get a good photo, though. Fun fact: a group of birds circling on a thermal like this is called a "kettle".
+There were lots of Black Vultures riding thermals above the river of grass. They never descended close enough for me to get a good photo, though. Fun fact: a group of birds circling on a thermal like this is called a "kettle".
 
 ![egret](/assets/images/posts/egret-florida.jpg)
 
-We have great egrets in California too. This one was standing on a mangrove above the river of grass.
+We have Great Egrets in California too. This one was standing on a mangrove above the river of grass.
 
 ![raven](/assets/images/posts/raven.jpg)
 
-There weren't supposed to be ravens in Florida according to Merlin (the birding app), only fish crows. But this was an unmistakable common raven couple: large-bodied and making a deep croak sound instead of the fish crow's nasally "keh". I think they were nesting in this tree, because they cawed aggressively at me when I approached to take this photo.
+There weren't supposed to be ravens in Florida according to Merlin (the birding app), only fish crows. But this was an unmistakable Common Raven couple: large-bodied and making a deep croak sound instead of the Fish Crow's nasally "keh". I think they were nesting in this tree, because they cawed aggressively at me when I approached to take this photo.
 
 ![wood-pewee](/assets/images/posts/mystery3.1-COLLAGE.jpg)
 
-This, I believe, is an eastern wood-pewee, a smaller and more elusive relative of California's black phoebe, which you've maybe seen in my photography posts before. Pewees are so named because their call sounds like "pe-WEE", and they're much more often heard than seen. I heard many of them in Boston, but this is the first time I've been able to get even a crappy picture.
+This, I believe, is an Eastern Wood-Pewee, a smaller and more elusive relative of California's Black Phoebe, which you've maybe seen in my photography posts before. Pewees are so named because their call sounds like "pe-WEE", and they're much more often heard than seen. I heard many of them in Boston, but this is the first time I've been able to get even a crappy picture.
 
 ![woodpecker](/assets/images/posts/woodpecker-2.jpg)
 
-This is a red-bellied woodpecker I spotted along the Gumbo Limbo rainforest trail. You can tell she's female because the red part doesn't cover the top of the head.
+This is a Red-Bellied Woodpecker I spotted along the Gumbo Limbo rainforest trail. You can tell she's female because the red part doesn't cover the top of the head.
 
 ![woodpecker2](/assets/images/posts/woodpecker-1.jpg)
 
-This one is a juvenile, who hasn't developed any red on its head yet. I also spotted the much smaller downy woodpecker on the Long Pine trail, but I didn't have my camera with me because of the threat of rain.
+This one is a juvenile, who hasn't developed any red on its head yet. I also spotted the much smaller Downy Woodpecker on the Long Pine trail, but I didn't have my camera with me because of the threat of rain.
 
 ![andrew](/assets/images/posts/andrew-1.jpg)
 
@@ -72,7 +72,7 @@ I took these photos on the beach at Virginia Key, the closest key to Miami.
 
 ![ibis](/assets/images/posts/ibis-1.jpg)
 
-When I first arrived, I was really excited to see the American whie ibis, since I've never seen any kind of ibis before. However, in Miami they're like chickens--ubiquitous and pesty. By the end of the trip I was shooing them away.
+When I first arrived, I was really excited to see the American White Ibis, since I've never seen any kind of ibis before. However, in Miami they're like chickens--ubiquitous and pesty. By the end of the trip I was shooing them away.
 
 ![ibis2](/assets/images/posts/ibis-2.jpg)
 
@@ -80,7 +80,7 @@ Look at his pretty blue eye! Ibises use their distinctive beaks to probe for inv
 
 ![ibis-and-grackle](/assets/images/posts/grackle-2.jpg)
 
-Another very common bird in Florida is the boat-tailed grackle. Now I've taken a photo of every kind of grackle in the continental US: the common grackle ([New York](https://obscuredinosaurfacts.com/blog/post/2021/06/02/dinophoto6.html)), the great-tailed grackle ([California](https://obscuredinosaurfacts.com/post/2022/04/13/dinophoto7.html)), and the boat-tailed grackle.
+Another very common bird in Florida is the Boat-Tailed Grackle. Now I've taken a photo of every kind of grackle in the continental US: the Common Grackle ([New York](https://obscuredinosaurfacts.com/blog/post/2021/06/02/dinophoto6.html)), the Great-Tailed Grackle ([California](https://obscuredinosaurfacts.com/post/2022/04/13/dinophoto7.html)), and the Boat-Tailed Grackle.
 
 ![grackle-2](/assets/images/posts/grackle-1.jpg)
 
@@ -92,7 +92,7 @@ Female grackles are brown and like to look straight at me for some reason.
 
 ![laughing](/assets/images/posts/laughing.jpg)
 
-Instead of the western gulls that are common in California, in Florida there was the smaller, black-headed laughing gull, which, true to its name, sometimes makes sounds like a hyena. Since it's not breeding season right now, their black heads have worn off to just a salt-and-pepper look with a black ear spot.
+Instead of the Western Gulls that are common in California, in Florida there was the smaller, black-headed Laughing Gull, which, true to its name, sometimes makes sounds like a hyena. Since it's not breeding season right now, their black heads have worn off to just a salt-and-pepper look with a black ear spot.
 
 ![grackle-prancing](/assets/images/posts/grackle-prancing.jpg)
 
@@ -104,27 +104,27 @@ This gull found a discarded shish kebab, and was being chased by grackles, crows
 
 ![fish](/assets/images/posts/fish-2.jpg)
 
-Some of the fish crows I saw were indistinguishable in appearance from the American crows common everywhere else in the US. But their voices were very distinctive, going "keh" instead of "caw".
+Some of the Fish Crows I saw were indistinguishable in appearance from the American crows common everywhere else in the US. But their voices were very distinctive, going "keh" instead of "caw".
 
 ![fish2](/assets/images/posts/fish-3.jpg)
 
-They were also often more scraggly-looking than the crows I'm used to. Either he's wet, or being a fish crow is hard.
+They were also often more scraggly-looking than the crows I'm used to. Either he's wet, or being a Fish Crow is hard.
 
 ![fish3](/assets/images/posts/fish-1.jpg)
 
-They probed among the seaweed, looking for crabs and other invertebrates. They seem less synanthropic than American crows.
+They probed among the seaweed, looking for crabs and other invertebrates. They seem less synanthropic than American Crows.
 
 ![ruddy](/assets/images/posts/ruddy-2.jpg)
 
-These shorebirds are called ruddy turnstones, since they forage by flipping over rocks to uncover invertebrates. The one in the center is a male.
+These shorebirds are called Ruddy Turnstones, since they forage by flipping over rocks to uncover invertebrates. The one in the center is a male.
 
 ![ruddy-2](/assets/images/posts/ruddy-1.jpg)
 
-Ruddy turnstones are found along coasts worldwide, and migrate great distances from the arctic, where they breed, to the rest of the world, where they spend the winter. I read somewhere once that there was an experiment that showed that these birds don't know why they turn stones, they just feel compelled to--something like, the birds saw the researchers placing the stones and knew there was never anything underneath, but flipped them anyway. But now I can't find the source. Maybe they just enjoy flipping stones for its own sake.
+Ruddy Turnstones are found along coasts worldwide, and migrate great distances from the arctic, where they breed, to the rest of the world, where they spend the winter. I read somewhere once that there was an experiment that showed that these birds don't know why they turn stones, they just feel compelled to--something like, the birds saw the researchers placing the stones and knew there was never anything underneath, but flipped them anyway. But now I can't find the source. Maybe they just enjoy flipping stones for its own sake.
 
 ![green](/assets/images/posts/green-1.jpg)
 
-I have a new second-favorite bird species: the green heron! These little guys were so bold and charismatic with their little mohawks, and didn't give a crap how close they got to me. They were hopping on the rocks very confidently, almost like parkour.
+I have a new second-favorite bird species: the Green Heron! These little guys were so bold and charismatic with their little mohawks, and didn't give a crap how close they got to me. They were hopping on the rocks very confidently, almost like parkour.
 
 ![green2](/assets/images/posts/green-3.jpg)
 
@@ -136,15 +136,15 @@ Look at that NECK! Birds can basically shape-shift by changing the contour of th
 
 ![green4](/assets/images/posts/green-8.jpg)
 
-Green herons are one of the few non-parrot, non-corvid birds known to use tools. They often use insects, bread, or other food as bait to lure fish to catch. This is the behavior that they gave to *Troodon* in *Amazing Dinoworld* (2019).
+Green Herons are one of the few non-parrot, non-corvid birds known to use tools. They often use insects, bread, or other food as bait to lure fish to catch. This is the behavior that they gave to *Troodon* in *Amazing Dinoworld* (2019).
 
 ![pelican](/assets/images/posts/pelican-florida.jpg)
 
-These are some brown pelicans. We have those in California.
+These are some Brown Pelicans. We have those in California.
 
 ![dove](/assets/images/posts/dove-1.jpg)
 
-This is a mourning dove, looking very annoyed. We have mourning doves in California too.
+This is a Mourning Dove, looking very annoyed. We have Mourning Doves in California too.
 
 ### Birds at the Park
 
@@ -152,15 +152,15 @@ I took these photos at Baggs Cape State Park, which has a trail dedicated for bi
 
 ![ground-dove](/assets/images/posts/ground-dove.jpg)
 
-This football-shaped bird is a common ground dove. Ironically, it's in a tree, whereas the mourning dove I showed you earlier, AND the Eurasian collared dove that's coming later, were on the ground. This one looks much friendlier than the annoyed mourning dove.
+This football-shaped bird is a Common Ground Dove. Ironically, it's in a tree, whereas the Mourning Dove I showed you earlier, AND the Eurasian Collared Dove that's coming later, were on the ground. This one looks much friendlier than the annoyed Mourning Dove.
 
 ![yellow](/assets/images/posts/yellow-1-COLLAGE.jpg)
 
-These are yellow warblers, spending time here to fatten up a little before their journey across the Gulf of Mexico toward Cuba. Can you imagine a bird this small travelling hundreds of miles over open ocean in the driving rain without stopping?  Why not just stay in Florida? Seems easier.
+These are Yellow Warblers, spending time here to fatten up a little before their journey across the Gulf of Mexico toward Cuba. Can you imagine a bird this small travelling hundreds of miles over open ocean in the driving rain without stopping?  Why not just stay in Florida? Seems easier.
 
 ![black-and-white](/assets/images/posts/black-white-1-COLLAGE.jpg)
 
-This is a black-and-white warbler, which climbs adroitly up and down tree trunks like a nuthatch, creeper, or woodpecker. Its colors are even convergent with that of a woodpecker. I wonder what about that lifestyle favors the black and white coloration.
+This is a Black-and-White Warbler, which climbs adroitly up and down tree trunks like a nuthatch, creeper, or woodpecker. Its colors are even convergent with that of a woodpecker. I wonder what about that lifestyle favors the black and white coloration.
 
 ![black-and-white2](/assets/images/posts/black-white-3.jpg)
 
@@ -168,7 +168,7 @@ It caught a bug hiding on the bark.
 
 ![red-shouldered](/assets/images/posts/red-shouldered-1.jpg)
 
-I'd just started along the birding trail when I came across this conspicuous juvenile red-shouldered hawk. It seemed huge, almost as big as a red tailed.
+I'd just started along the birding trail when I came across this conspicuous juvenile Red-Shouldered Hawk. It seemed huge, almost as big as a Red Tailed.
 
 ![red-shouldered2](/assets/images/posts/red-shouldered-2.jpg)
 
@@ -176,7 +176,7 @@ He noticed me, but wasn't bothered enough to do anything about it.
 
 ![mocking](/assets/images/posts/mocking-1.jpg)
 
-A northern mockingbird couple was mocking him, flitting around his perch. We have northern mockingbirds in California.
+A Northern Mockingbird couple was mocking him, flitting around his perch. We have Northern Mockingbirds in California.
 
 ![red-shouldered3](/assets/images/posts/red-shouldered-3.jpg)
 
@@ -184,31 +184,31 @@ He seemed quite unsure of himself. That talon looks pretty deadly though!
 
 ![gnat](/assets/images/posts/gnat.jpg)
 
-This is a blue-gray gnatcatcher. They were relatively common both on Key Biscayne and in the Everglades, but were really hard to get a picture of because they hop about constantly, like a bushtit. Apparently they don't actually eat gnats.
+This is a Blue-Gray Gnatcatcher. They were relatively common both on Key Biscayne and in the Everglades, but were really hard to get a picture of because they hop about constantly, like a Bushtit. Apparently they don't actually eat gnats.
 
 ![kingbird](/assets/images/posts/kingbird.jpg)
 
-This is a gray kingbird, another relative of our black phoebe, and one with a noticeable resemblance. Supposedly, they are called kingbirds (and the family is called tyrant flycatchers) because of their take-charge attitude. They are sometimes seen defending their territory against hawks.
+This is a Gray Kingbird, another relative of our Black Phoebe, and one with a noticeable resemblance. Supposedly, they are called kingbirds (and the family is called tyrant flycatchers) because of their take-charge attitude. They are sometimes seen defending their territory against hawks.
 
 ![eastern](/assets/images/posts/mystery1.1-COLLAGE.jpg)
 
-Now for the birds I could only get bad photos of.  This is an eastern kingbird, another tyrant flycatcher, but with a much different body shape than the ones I'd seen so far. It's shaped almost like a mockingbird--much bigger and longer than other kingbirds, and with a noticeable neck.
+Now for the birds I could only get bad photos of.  This is an Eastern Kingbird, another tyrant flycatcher, but with a much different body shape than the ones I'd seen so far. It's shaped almost like a mockingbird--much bigger and longer than other kingbirds, and with a noticeable neck.
 
 ![redstart](/assets/images/posts/mystery2.1-COLLAGE.jpg)
 
-This is a female American redstart, another type of warbler. It wouldn't sit still, nor would it expose itself much outside the foliage.
+This is a female American Redstart, another type of warbler. It wouldn't sit still, nor would it expose itself much outside the foliage.
 
 ![oven](/assets/images/posts/oven.jpg)
 
-This is an ovenbird, another warbler that looks more like a thrush. They are extremely loud, and I was hearing them the entire time I was taking bird photos, but this was the best picture I was able to get, since they stay off the trails and blend into the dry leaves. They get their name from the kiln-shaped nests they build.
+This is an Ovenbird, another warbler that looks more like a thrush. They are extremely loud, and I was hearing them the entire time I was taking bird photos, but this was the best picture I was able to get, since they stay off the trails and blend into the dry leaves. They get their name from the kiln-shaped nests they build.
 
 ### Birds in the City
 
-Another thing I was looking forward to seeing in Florida was the feral parakeets. Many escaped pets have formed breeding populations here. The only ones I saw were monk parakeets, loud green birds with white faces.
+Another thing I was looking forward to seeing in Florida was the feral parakeets. Many escaped pets have formed breeding populations here. The only ones I saw were Monk Parakeets, loud green birds with white faces.
 
 ![monk](/assets/images/posts/parakeet-2.jpg)
 
-In the book *The Wild Parrots of Telegraph Hill*, which I highly recommend, it was a big secret where the parakeets nested, which the author only discovered after years of knowing the birds, and refrained from mentioning by name in the book. However, the Florida monk parakeets nest in a very obvious location--right in the middle of Lincoln Road, a famous high-end shopping strip in Miami Beach.
+In the book *The Wild Parrots of Telegraph Hill*, which I highly recommend, it was a big secret where the parakeets nested, which the author only discovered after years of knowing the birds, and refrained from mentioning by name in the book. However, the Florida Monk Parakeets nest in a very obvious location--right in the middle of Lincoln Road, a famous high-end shopping strip in Miami Beach.
 
 ![monk2](/assets/images/posts/parakeet-1.jpg)
 
@@ -216,19 +216,19 @@ This one was futzing with a bit of greenery, either for fun or for nest maintena
 
 ![eurasian](/assets/images/posts/collared.jpg)
 
-Another invasive species, but one we also have trouble with in California, is the Eurasian collared dove.
+Another invasive species, but one we also have trouble with in California, is the Eurasian Collared Dove.
 
 ![spoonbill](/assets/images/posts/spoonbill.jpg)
 
-This is kind of cheating, but I went to the Frost Museum of Science and they had an aviary that housed local birds. This is a roseate spoonbill, which is kind of like a discount flamingo. It's not nearly as good at filtering tiny prey out of water as a flamingo, since it lacks baleen, so it must forage for many hours every day and is not as pink as a flamingo. Spoonbills are related to ibises.
+This is kind of cheating, but I went to the Frost Museum of Science and they had an aviary that housed local birds. This is a Roseate Spoonbill, which is kind of like a discount flamingo. It's not nearly as good at filtering tiny prey out of water as a flamingo, since it lacks baleen, so it must forage for many hours every day and is not as pink as a flamingo. Spoonbills are related to ibises.
 
 ![glossy](/assets/images/posts/black-ibis.jpg)
 
-Speaking of ibises, this is a glossy ibis, a nomadic species with a near-worldwide distribution. This one has a problem with its wing, which is probably why it's in the aviary.
+Speaking of ibises, this is a Glossy Ibis, a nomadic species with a near-worldwide distribution. This one has a problem with its wing, which is probably why it's in the aviary.
 
 ![owl](/assets/images/posts/owl-1.jpg)
 
-This is an Eastern screech owl, a small owl that doesn't screech, but rather neighs like a tiny horse.
+This is an Eastern Screech Owl, a small owl that doesn't screech, but rather neighs like a tiny horse.
 
 ![owl2](/assets/images/posts/owl-2.jpg)
 
@@ -244,7 +244,7 @@ This tern is not in breeding plumage. Perhaps it's a juvenile.
 
 ![wood](/assets/images/posts/wood-duck.jpg)
 
-This is a male wood duck, a very fancy duck closely related to the even fancier Mandarin duck, which lives in east Asia.
+This is a male Wood Duck, a very fancy duck closely related to the even fancier Mandarin Duck, which lives in east Asia.
 
 ![wood2](/assets/images/posts/wood-duck-2.jpg)
 
@@ -252,7 +252,7 @@ This is his wife, who is much less fancy.
 
 ![chucks](/assets/images/posts/chucks.jpg)
 
-This, believe it or not, is a chuck-wills-widow, a large type of nightjar. I'd just gotten off the plane, and there it was, sitting on a fence in the arrivals area of the airport. I didn't have my camera ready, and when I took it out of my bag the lens fogged over from the sudden humidity, so I wasn't able to get any good pictures. I didn't realize I had to be ready for birding instantly!
+This, believe it or not, is a Chuck-Wills-Widow, a large type of nightjar. I'd just gotten off the plane, and there it was, sitting on a fence in the arrivals area of the airport. I didn't have my camera ready, and when I took it out of my bag the lens fogged over from the sudden humidity, so I wasn't able to get any good pictures. I didn't realize I had to be ready for birding instantly!
 
 ### Non-birds
 
@@ -296,7 +296,7 @@ These baby American alligators were also at the museum. It was hard to get pictu
 
 ![gator2](/assets/images/posts/gator-2.jpg)
 
-The American Southeast is the only place in the world where you have to tell the differnce between crocs and alligators. Nowhere else do their ranges overlap.
+The American Southeast is the only place in the world where you have to tell the difference between crocs and alligators. Nowhere else do their ranges overlap.
 
 ![spider](/assets/images/posts/spider.jpg)
 
@@ -328,7 +328,7 @@ This is a squirrel with the largest testicle to body size ratio I've ever seen. 
 
 ![cooper](/assets/images/posts/cooper-grasping.png)
 
-And lastly, a bonus--I recently got a cockatiel named Cooper! Here he is grasping a favorite toy. He's not so good at grasping things with his feet yet.
+And lastly, a bonus--I recently got a Cockatiel named Cooper! Here he is grasping a favorite toy. He's not so good at grasping things with his feet yet.
 
 ![cooper](/assets/images/posts/cooper-birdwatching.png)
 
