--- a/_posts/2022-04-06-dinophoto7.md
+++ b/_posts/2022-04-06-dinophoto7.md
@@ -12,11 +12,11 @@ The other thing I did in Denver was take some pictures of birds that don't live 
 
 ![woodhouse1](/assets/images/posts/scrub-denver.jpg)
 
-In California, we have California scrub jays; in Denver, they have Woodhouse's scrub jays. They're very similar, but California jays have a blue 'necklace' and only overlap in a very small part of their range.
+In California, we have California Scrub Jays; in Denver, they have Woodhouse's Scrub Jays. They're very similar, but California Scrub Jays have a blue 'necklace' and only overlap in a very small part of their range.
 
 ![woodhouse2](/assets/images/posts/scrub2-denver.jpg)
 
-The bird I was most excited to get photos of in Denver was the ubiquitous black-billed magpie.
+The bird I was most excited to get photos of in Denver was the ubiquitous Black-Billed Magpie.
 
 ![magpie1](/assets/images/posts/magpie1.jpg)
 
@@ -28,7 +28,7 @@ Oh hi!
 
 ![magpie3](/assets/images/posts/magpie3.jpg)
 
-We have yellow-billed magpies in California, but they're not common around here and I've never been able to get a picture. In contrast, the black-billed ones were everywhere in Denver.
+We have Yellow-Billed Magpies in California, but they're not common around here and I've never been able to get a picture. In contrast, the Black-Billed ones were everywhere in Denver.
 
 ![magpie4](/assets/images/posts/magpie4.jpg)
 
@@ -36,23 +36,23 @@ Not a bird, but we also saw some marmots in a field in Denver. They are surprisi
 
 ![marmot](/assets/images/posts/marmot-denver.jpg)
 
-I also added a couple new types of sparrow to my list: the usually dark-faced Harris's sparrow, in Denver, which in non-breeding plumage only sports some dark patches on the corners of its mouth:
+I also added a couple new types of sparrow to my list: the usually dark-faced Harris's Sparrow, in Denver, which in non-breeding plumage only sports some dark patches on the corners of its mouth:
 
 ![sparrow](/assets/images/posts/sparrow-denver.jpg)
 
-And the red-headed chipping sparrow, spotted in Southern California.
+And the red-headed Chipping Sparrow, spotted in Southern California.
 
 ![chipping](/assets/images/posts/chipping.jpg)
 
-There were also large, audacious flocks of house sparrows in cetral California during the drive down. These are invasive, native to Europe and negatively affecting populations of Californian birds such as bluebirds and New World sparrows. But they are quite cute.
+There were also large, audacious flocks of House Sparrows in cetral California during the drive down. These are invasive, native to Europe and negatively affecting populations of Californian birds such as bluebirds and New World sparrows. But they are quite cute.
 
 ![house](/assets/images/posts/house.jpg)
 
-At the same truck stop, we encountered another invasive species, the Eurasian collared dove.
+At the same truck stop, we encountered another invasive species, the Eurasian Collared Dove.
 
 ![eurasian](/assets/images/posts/eurasian.jpg)
 
-And thankfully some native birds as well, the great-tailed grackle. I've taken pictures before of common grackles in Texas and New York. Honestly if not for range I don't think I'd be able to tell the two species (and the third American grackle species, the boat-tailed) apart.
+And thankfully some native birds as well, the Great-Tailed Grackle. I've taken pictures before of Common Grackles in Texas and New York. Honestly if not for range I don't think I'd be able to tell the two species (and the third American grackle species, the Boat-Tailed) apart.
 
 ![great-tailed](/assets/images/posts/greattailed.jpg)
 
@@ -60,11 +60,11 @@ Male grackles are iridescent black, while females are brown; this is common for 
 
 ![hiding-grackle](/assets/images/posts/hiding-grackle.jpg)
 
-In the same group of trees, there was a mourning dove. What do you think it thought of the racket the grackles were making?
+In the same group of trees, there was a Mourning Dove. What do you think it thought of the racket the grackles were making?
 
 ![mourning](/assets/images/posts/mourning.jpg)
 
-Also common at truck stops were Brewer's blackbirds. Like a lot of urban birds, many were missing toes. What is it that gets these birds' toes?
+Also common at truck stops were Brewer's Blackbirds. Like a lot of urban birds, many were missing toes. What is it that gets these birds' toes?
 
 ![struttin](/assets/images/posts/struttin.jpg)
 
@@ -72,22 +72,22 @@ While they were bold and used to humans, they weren't quite tame enough to not n
 
 ![nope](/assets/images/posts/nope.jpg)
 
-Another thing I was looking forward to seeing in the Central Valley was the cliff swallows in the underpasses. I apologize for the crappy pictures, but they were taken at eighty miles per hour. In hindsight, I probably should've asked the driver to pull over--the big mud nests weren't going anywhere!
+Another thing I was looking forward to seeing in the Central Valley was the Cliff Swallows in the underpasses. I apologize for the crappy pictures, but they were taken at eighty miles per hour. In hindsight, I probably should've asked the driver to pull over--the big mud nests weren't going anywhere!
 
 ![swallow1](/assets/images/posts/swallow1.jpg)
 
-And a weird thing happened just before we reached our destination--a great egret was just standing on someone's lawn, not moving even when multiple neighbors and I gathered to look at it.
+And a weird thing happened just before we reached our destination--a Great Egret was just standing on someone's lawn, not moving even when multiple neighbors and I gathered to look at it.
 
 ![great-portrait](/assets/images/posts/great-portrait.jpg)
 
-Back at home, I got a few shots of some old favorites at the San Francisco Botanical Garden. It's a pretty nice place, and free for residents!  Here's a black phoebe:
+Back at home, I got a few shots of some old favorites at the San Francisco Botanical Garden. It's a pretty nice place, and free for residents!  Here's a Black Phoebe:
 
 ![phoebe](/assets/images/posts/phoebe-garden.jpg)
 
-An Anna's hummingbird:
+An Anna's Hummingbird:
 
 ![annas](/assets/images/posts/humming-garden1.jpg)
 
-And a Steller's jay.
+And a Steller's Jay.
 
 ![stellers](/assets/images/posts/stellers-garden.jpg)
